<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:padding="10dp"
              android:background="@drawable/fondo_azul">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
                     android:orientation="vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:padding="10dp"
                     android:stretchColumns="1"
            >

            <TableRow>

                <TextView
                    android:text="@string/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtNombre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    />

                <EditText
                    android:id="@+id/edtDescricion2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="4"
                    android:inputType="textMultiLine"
                    android:maxWidth="0dp"
                    />

            </TableRow>


            <Button
                android:id="@+id/btnSeleccionarFoto"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto"
                />

            <TextView
                android:paddingTop="10dp"
                android:text="@string/fotografia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ImgViewImagen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:scaleType="centerInside" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGuardar2"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_weight="0.5"
                />

            <Button
                android:id="@+id/btnEliminar2"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                android:layout_weight="0.5"
                />


        </LinearLayout>

    </TableLayout>

    </ScrollView>

</LinearLayout>

